crates/engage/tests/integrations/snapshots/integrations__self_loop@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about self-loops.
---
Some(
    2,
)
