crates/engage/tests/integrations/snapshots/integrations__self_loop@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about self-loops.
---

