crates/engage/tests/integrations/snapshots/integrations__self_loop_dot@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
Warning #1
Description: dependency cycles are present
Help: try using `engage dot` with the `-r`/`--relaxed` option to visualize the graph to determine where to break the cycles
Note: a process that depends on itself (i.e. participates in a dependency cycle) cannot spawn because it cannot become ready before spawning

Warning #2 (which caused #1)
Description: the dependencies between `b` and `a` form a cycle

Warning #3 (which caused #1)
Description: the dependencies between `e`, `d`, and `c` form a cycle
