crates/engage/tests/integrations/snapshots/integrations__serial_processes@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit successfully after running a handful of processes serially.
---
Some(
    0,
)
