crates/engage/tests/integrations/snapshots/integrations__serial_processes@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit successfully after running a handful of processes serially.
---
  ╭─┬◀ starting
a │O│ a
b │O│ b
c │O│ c
  ╰─┴▶ success
