crates/engage/tests/integrations/snapshots/integrations__serial_tasks@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit successfully after running a handful of tasks in serially.
---
Some(
    0,
)
